<resources>
    <string name="app_name">Beauty Center</string>
    <string name="title_login_ui">Bienvenido</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_action_bar">Centro de Belleza</string>

    <string name="user">Usuario</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="email">Email</string>
    <string name="birthday">Fecha de Nacimiento</string>
    <string name="phone">Celular</string>
    <string name="password">Clave</string>

    <string name="button_login_mgs">Iniciar Sesión</string>
    <string name="button_reserve_mgs">Reservar</string>
    <string name="button_sing_up_mgs">Registrate</string>

    <string name="tab_text_1">Servicios</string>
    <string name="tab_text_2">Publicaciones</string>
    <string name="tab_text_3">"Citas"</string>

    <string name="error_required_field_mgs">"Campo Requerido"</string>
    <string name="error_email_mgs">"Correo Invalido"</string>
    <string name="custom_content_desc">Usuario</string>
    <string name="content_description_logo">Logo</string>
    <string name="text_sign_up_here">Registrate aquí!</string>
    <string name="text_connect_with">O conéctate con</string>
    <string name="text_test_button">Button</string>
    <string name="text_image_post">Publicación</string>
    <string name="text_image_appointment">Cita</string>
    <string name="text_test">Texto de prueba</string>
    <string name="text_image_service">Servicio</string>
    <string name="text_image_service_detail">Detalle del Servicio</string>

</resources>
