<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:backgroundTint="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@mipmap/logotype"
                android:id="@+id/imageView"/>
            <TextView
                android:text="@string/title_login_ui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="30sp"
                android:textColor="@color/primary_text"
                android:id="@+id/textView2"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:id="@+id/textInputEmail">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/email"
                    android:textSize="20sp"
                    android:paddingTop="12dp"
                    android:ems="10"
                    android:id="@+id/editTextEmail"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:id="@+id/textInputPassword">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="20sp"
                    android:paddingTop="12dp"
                    android:ems="10"
                    android:id="@+id/editTextPassword"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:text="@string/button_login_mgs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLogin"
                android:backgroundTint="@color/primary"
                android:textColor="@color/icons"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:text="Olvidaste tu Clave?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewForgotPassword"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            <TextView
                android:text="Registrate aquí!"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewRegistry"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:textSize="20sp"/>
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"/>
            <TextView
                android:text="O Conectate con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewOption"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textSize="20sp"/>


        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>